# AED

./: .gitignore  CMakeLists.txt  README.md
aedtools/: evalbase.hpp  graphviz.hpp  lisp.hpp  util_btree.hpp
gtp2/src/: Makefile  prog_a_3.cpp  prog_a_4.cpp  prog_a_5.cpp  utils.cpp  utils.hpp
gtp3/docs/: kruskal-algo.pdf.crdownload  prim-algo.pdf.crdownload
tpl1/tpl1-2024-compact_queues/: Makefile  compact_queues.cpp  eval.hpp
tpl1/tpl1-2024-priority_stack/: Makefile  eval.hpp  priority_stack.cpp
tpl2/tpl2-2024-mkmono/: Makefile  eval.hpp  mkmono.cpp
tpl2/tpl2-2024-neg2pos/: Makefile  eval.hpp  neg2pos.cpp
tpl3/tpl3-2024-abbpred/: Makefile  abbpred.cpp  eval.hpp
tpl3/tpl3-2024-sumcartesian/: Makefile  eval.hpp  sumcartesian.cpp
tplr/tplr-2024-mkabb/: Makefile  eval.hpp  mkabb.cpp  mkabb.json
tplr/tplr-2024-setinters/: Makefile  eval.hpp  setinters.cpp  setinters.json
tplr/tplr-2024-stack2queue/: Makefile  eval.hpp  stack2queue.cpp
tplr/tplr-2024-unify/: Makefile  eval.hpp  lm.json  unify.cpp
